CNCF/Istio/istio-ingress-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  ports:
  - name: http2
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8443
  - name: app1-port
    port: 8080
    targetPort: 8080
  - name: app2-port
    port: 8081
    targetPort: 8081
